...
	<string name="info_bar_detail_title">Table: %1$s (Detailed)</string>
	<string name="info_bar_graph_title">Table: %1$s (Graph: %2$s)</string>
	<string name="search">Search</string>
	<string name="view_type">View Type</string>
	<string name="view_type_table">Table</string>
	<string name="view_type_list">List</string>
	<string name="view_type_graph">Graph</string>
	<string name="add_row">Add Row</string>
	<string name="settings">Settings</string>
	<string name="display_prefs">Display Preferences</string>
	<string name="table_props">Table Properties</string>
	<string name="edit_table_props">Edit Table Properties</string>
	<string name="list_view_manager">List View Manager</string>
...
	<string name="change_map_view_latitude_column">Change Map View Latitude Column</string>
	<string name="change_map_view_longitude_column">Change Map View Longitude Column</string>
	<string name="change_map_view_list_view_file">Select List View File for Map Display</string>
	<string name="import_csv">Import CSV</string>
	<string name="import_csv_filename">Filename of CSV File to Import:</string>
	<string name="export_csv">Export CSV</string>
	<string name="import_choose_csv_file">Select CSV File to Import</string>
	<string name="import_disposition_label">Import to new table or append to an existing table?</string>
	<string name="import_new_table">New Table</string>
	<string name="import_import_new_table">Import New Table</string>
	<string name="import_append_table">Append to an Existing Table</string>
	<string name="import_in_progress">File import in progress&#8230;</string>
	<string name="import_success">File import was successful.</string>
...
	<string name="export_opt_include_instance_name">Include Instance Name</string>
	<string name="export_opt_include_form_id">Include Form Id</string>
	<string name="export_opt_include_locale">Include Locale</string>
	<string name="export_csv_file">Exported CSV Filename</string>
	<string name="export_choose_csv_file">Select CSV File to Export</string>
	<string name="export_button">Export</string>
	<string name="export_success">File export was successful.</string>
	<string name="export_failure">File export failed.</string>
	<string name="export_in_progress">File export in progress&#8230;</string>
	<string name="export_partial_success">Data exported, but some customized settings were not able to exported.</string>
	<string name="graph_manager">Graph Manager</string>
	<string name="add_new_graph">Add New Graph</string>
	<string name="edit_graph">Edit this Graph</string>
	<string name="delete_graph">Delete this Graph</string>
...
