<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"/>

    <EditText
            android:id="@+id/edit_field"
            android:inputType="textNoSuggestions"
            android:fontFamily="@font/sourcesanspro_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>