<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_edit_row"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:title="@string/edit_row"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_table_manager_sync"
        android:icon="@drawable/ic_sync"
        android:title="@string/sync"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_table_manager_preferences"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/preferences"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_table_about"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
