<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- Add a row -->
    <item
        android:id="@+id/top_level_table_menu_add"
        android:icon="@drawable/ic_action_new"
        android:title="@string/add_row"
        android:showAsAction="always" />
    
    <!-- Select a view -->
    <item
        android:id="@+id/top_level_table_menu_select_view"
        android:icon="@drawable/ic_action_view_as_list"
        android:title="@string/select_view"
        android:showAsAction="always" >
        
        <!-- View submenu -->
        <menu>
            <group android:checkableBehavior="single">
	            <item
	                android:id="@+id/top_level_table_menu_view_spreadsheet_view"
	                android:title="@string/spreadsheet" />
	            <item
	                android:id="@+id/top_level_table_menu_view_list_view"
	                android:title="@string/list" />
	            <item
	                android:id="@+id/top_level_table_menu_view_graph_view"
	                android:title="@string/graph" />
	            <item
	                android:id="@+id/top_level_table_menu_view_map_view"
	                android:title="@string/map" />
            </group>
        </menu>
    </item>
    
    <item
        android:id="@+id/top_level_table_menu_table_properties"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/preferences"
        android:showAsAction="always" />
            

</menu>
