...
	<string name="no_data">No data</string>
	<string name="no_matching_rows">No rows found.</string>
	<string name="edit">Edit</string>
	<string name="write_access_control_group">Write Access Control Group:</string>
	<string name="read_access_control_group">Read Access Control Group:</string>
	<string name="select_view">Select View</string>
	<string name="spreadsheet">Spreadsheet</string>
	<string name="error_while_changing_group_by_columns">Error while changing group by columns</string>
	<string name="error_while_changing_sort_column">Error while changing sort column</string>
	<string name="error_while_changing_index_column">Error while changing index column</string>
	<string name="list">List</string>
	<string name="graph">Graph</string>
	<string name="map">Map</string>
...
	<string name="change_map_view_latitude_column">Change Map View Latitude Column</string>
	<string name="change_map_view_longitude_column">Change Map View Longitude Column</string>
	<string name="change_map_view_list_view_file">Select List View File for Map Display</string>
	<string name="import_csv">Import CSV</string>
	<string name="import_csv_filename">Filename of CSV File to Import:</string>
	<string name="export_csv">Export CSV</string>
	<string name="import_choose_csv_file">Select CSV File to Import</string>
	<string name="import_disposition_label">Import to new table or append to an existing table?</string>
	<string name="import_new_table">New Table</string>
	<string name="import_import_new_table">Import New Table</string>
	<string name="import_append_table">Append to an Existing Table</string>
	<string name="import_in_progress">File import in progress&#8230;</string>
	<string name="import_success">File import was successful.</string>
...
	<string name="are_you_sure_overwrite_graph">Please confirm overwriting of graph: %1$s</string>
	<string name="confirm_delete_row">Confirm Delete Row</string>
	<string name="are_you_sure_delete_row">Please confirm deletion of row: %1$s</string>
	<string name="resolve_conflict">Resolve Conflict</string>
	<string name="edit_cell">Edit Value: %1$s</string>
	<string name="delete_row">Delete Row</string>
	<string name="edit_row">Edit Row</string>
	<string name="delete_table">Delete this Table</string>
	<string name="confirm_delete_table">Confirm Delete Table</string>
	<string name="cannot_delete_table">Cannot Delete Table</string>
	<string name="confirm_remove_table">Confirm Remove Table from Device</string>
	<string name="are_you_sure_delete_table">Please confirm deletion of table: %1$s</string>
	<string name="are_you_sure_remove_table">Please confirm removal of table: %1$s from device</string>
...
